feat : enable Ollama Image model (#274)
* feat : enable Image model

* turn off by default

* fix spotless issue

* Implement code review comments

* fix : golden data set

* fix : failed test

* fix merge conflicts

* fix code review comments

* add test

* fix merge conflict

* tighten screws

* implement code review comments

* fix : code review comments

* Implement code review properties

* implement code review comments

* fix test failures

* fix test case failures

* implement code review comments